Changed projects look

--- a/index.html
+++ b/index.html
@@ -125,18 +125,22 @@
                 <h5 class="card-title text-center pythongradient">Python</h5>
                 <h5 class="card-title">Warsaw flat bot</h5>
                 <p class="card-text">App in python for telegram which seeks flats to rent in Warsaw</p>
-                <a href="https://github.com/SURFLOU" class="btn btn-purple">View source code</a>
                 </div>
+                <a href="https://github.com/SURFLOU/DataHelper">
+                    <span class="link-spanner"></span>
+                </a>
             </div>
-
+            
             <div class="card col" style="width: 18rem;">
                 <img src="/img/pythonlogotransparent.png" class="card-img-top" alt="python logo">
                 <div class="card-body">
                 <h5 class="card-title text-center pythongradient">Python</h5>
-                <h5 class="card-title">Data helper</h5>
-                <p class="card-text">App written in python to help operating with data files</p>
-                <a href="https://github.com/SURFLOU/DataHelper" class="btn btn-purple">View source code</a>
+                <h5 class="card-title">Pycovid tracker</h5>
+                <p class="card-text">API-like App which tracks covid deaths, infections in Poland</p>
                 </div>
+                <a href="https://github.com/SURFLOU/DataHelper">
+                    <span class="link-spanner"></span>
+                </a>
             </div>
 
             <div class="card col" style="width: 18rem;">
@@ -144,9 +148,11 @@
                 <div class="card-body">
                 <h5 class="card-title text-center htmlcssgradient">HTML + CSS + JS</h5>
                 <h5 class="card-title">Aneta Glodek FHU</h5>
-                <p class="card-text">Website created for an accounting company</p>
-                <a href="https://github.com/SURFLOU/FHU-AnetaGlodek" class="btn btn-purple">View source code</a>
+                <p class="card-text">Onepage website created for an accounting company in bootstrap</p>
                 </div>
+                <a href="https://github.com/SURFLOU/FHU-AnetaGlodek">
+                    <span class="link-spanner"></span>
+                </a>
             </div>
         </div>  
     </div>
