--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>Piotr Konopka</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,114 +12,102 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 <body>
-    <!-- Navbar-->
-        <div class="container" id="navbar">
-
-                <ul class="nav justify-content-end fixed-top" id="darknavbar">
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#aboutme">About me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#jobexperience">Job experience</a>
-                      </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#contactme">Contact</a>
-                    </li>
-
-        </div>
-
     <!-- About me section -->
     <div class="container" id="aboutme">
-        <h1 class="col-4 info">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.</h1>
+        <h1 class="col-lg-4 col-md-4 col-sm-6 col-xs-6 info">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.</h1>
         <br></br>
-        <div class="row"> 
-            <div class="col-6">
-                <h2 class="text-center"> My languages skills: </h2>
-                <h3>Polish: Native (C2)</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h3>English: C1/C2</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h3>German: C1</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h3>Spanish: C1</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h2> And still more to go...</h2>
-            </div>
-
-            <div class="col-6">
-                <h2 class="text-center">My programming skills: </h2>
-                <h3>Python</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h3>Bootstrap</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h3>HTML/Css/Javascript</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h3>SQL Databases</h3>
-                <div class="progress" style="width: 100%">
-                    <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 55%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-        </div>
-
-
     </div>
+
+        <div class="container" id="languageskills">
+            <div class="row"> 
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <h2 class="text-center"> My languages skills: </h2>
+                    <h3>Polish: Native (C2)</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h3>English: C1/C2</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h3>German: C1</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h3>Spanish: C1</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-purple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h2> And still more to go...</h2>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <h2 class="text-center">My programming skills: </h2>
+                    <h3>Python</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h3>Bootstrap</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h3>HTML/Css/Javascript</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h3>SQL Databases</h3>
+                    <div class="progress" style="width: 100%">
+                        <div class="progress-bar-striped bg-darkpurple" role="progressbar" style="width: 55%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
 
     <!-- Job experience section -->
 
     <div class="container" id="jobexperience">
-        <h2 class="text-center">My job experience</h2>
-        <p class="job"> 
-        IT support with German <br>
-        <img src="/img/teleperformancelogo.png" alt="tplogo" id="tplogo">
-        Teleperformance Poland, Warsaw <br>
-        05.2022 - ongoing
-        </p>
+        <h2 class="text-center col-12">My job experience</h2>
 
-        <p class="jobinfo">
-        My responsibilities: <br>
-        -Provided IT support for clients in Germany, Switzerland, Austria and Luxemburg <br>
-        -Communicated with the rest of the team in English
-        </p>
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                <p class="job"> 
+                    IT support with German <br>
+                    <img src="/img/teleperformancelogo.png" alt="tplogo" id="tplogo">
+                    Teleperformance Poland, Warsaw <br>
+                    05.2022 - ongoing
+                </p>
+
+                <p class="jobinfo">
+                    My responsibilities: <br>
+                    -Provided IT support for clients in Germany, Switzerland, Austria and Luxemburg <br>
+                    -Communicated with the rest of the team in English
+                </p>
+            </div>
 
         <br>
         
-        <p class="job">
-        Accounting assistant internship <br>
-        <img src="/img/agtransparent.png" id="aglogo">
-        Aneta Głodek F.H.U., Bydgoszcz <br>
-        05.2021 - 07.2021
-        </p>
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <p class="job">
+                Accounting assistant internship <br>
+                <img src="/img/agtransparent.png" id="aglogo">
+                Aneta Głodek F.H.U., Bydgoszcz <br>
+                05.2021 - 07.2021
+            </p>
 
-        <p class="jobinfo">
-            My responsibilities: <br>
-            -Translated accounting documents from English and German <br>
-            -Basic usage of accounting software
-
-        </p>
+            <p class="jobinfo">
+                My responsibilities: <br>
+                -Translated accounting documents from English and German <br>
+                -Basic usage of accounting software
+            </p>
+        </div>
     </div>
 
     <!-- Portfolio section -->
     <div class="container" id="portfolio">
-        <h1 class="text-center">My projects</h1>
+        <h1 class="text-center col-12">My projects</h1>
         <div class="row">
-            <div class="card col" style="width: 18rem;">
+            <div class="card col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <img src="/img/pythonlogotransparent.png" class="card-img-top" alt="python logo">
                 <div class="card-body">
                 <h5 class="card-title text-center pythongradient">Python</h5>
@@ -131,19 +119,19 @@
                 </a>
             </div>
             
-            <div class="card col" style="width: 18rem;">
+            <div class="card col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <img src="/img/pythonlogotransparent.png" class="card-img-top" alt="python logo">
                 <div class="card-body">
                 <h5 class="card-title text-center pythongradient">Python</h5>
                 <h5 class="card-title">Pycovid tracker</h5>
                 <p class="card-text">API-like App which tracks covid deaths, infections in Poland</p>
                 </div>
-                <a href="https://github.com/SURFLOU/DataHelper">
+                <a href="https://github.com/SURFLOU/PyCovidTrackerr">
                     <span class="link-spanner"></span>
                 </a>
             </div>
 
-            <div class="card col" style="width: 18rem;">
+            <div class="card col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <img src="/img/bootstraplogo.png" class="card-img-top" alt="bootstrap logo">
                 <div class="card-body">
                 <h5 class="card-title text-center htmlcssgradient">HTML + CSS + JS</h5>
@@ -159,11 +147,11 @@
 
     <!-- Contact me section -->
     <div class="container" id="contactme">
-        <h1 class="text-center">Contact me</h1>
+        <h1 class="text-center col-sm-12 col-xs-12">Contact me</h1>
         <div class="row">
-            <div class="col-4" style="font-size: 30px"><a href="https://github.com/SURFLOU"><i class="bi bi-github"></i>Github</a></div>
-            <div class="col-4" style="font-size: 30px"><a href="https://github.com/SURFLOU"><i class="bi bi-envelope"></i>Email</a></div>
-            <div class="col-4" style="font-size: 30px"><a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i>Linkedin</a></div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="https://github.com/SURFLOU"><i class="bi bi-github"></i>Github</a></div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="https://github.com/SURFLOU"><i class="bi bi-envelope"></i>Email</a></div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i>Linkedin</a></div>
         </div>
     </div>
 
