--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link rel="stylesheet" href="/css/pagescroll.css" />
+    <script src="/js/pagescroll.js"></script>
+
 </head>
 <body>
+    <div id="pagescroll">
     <!-- About me section -->
-    <div class="container" id="aboutme">
-        <h1 class="col-lg-4 col-md-4 col-sm-6 col-xs-6 info">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.</h1>
+    <section class="section">
+    <div id="aboutme" class="container">
+        <h1 class="col-lg-12 col-md-4 col-sm-6 col-xs-6 info text-center">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.<br><br><i class="bi bi-github"></i> <i class="bi bi-linkedin"></i></h1>
+        <h3 class="botinfo text-center"><i class="bi bi-caret-down"></i> <br> Scroll down to find more</h3>
         <br></br>
     </div>
+    </section>
 
+        <section class ="section">
         <div class="container" id="languageskills">
             <div class="row"> 
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -64,9 +72,9 @@
 
 
         </div>
-
+        </section>
     <!-- Job experience section -->
-
+    <section class = "section">
     <div class="container" id="jobexperience">
         <h2 class="text-center col-12">My job experience</h2>
 
@@ -102,8 +110,10 @@
             </p>
         </div>
     </div>
+    </section>
 
     <!-- Portfolio section -->
+    <section class="section">
     <div class="container" id="portfolio">
         <h1 class="text-center col-12">My projects</h1>
         <div class="row">
@@ -144,8 +154,9 @@
             </div>
         </div>  
     </div>
-
+</section>
     <!-- Contact me section -->
+    <section class="section">
     <div class="container" id="contactme">
         <h1 class="text-center col-sm-12 col-xs-12">Contact me</h1>
         <div class="row">
@@ -154,10 +165,20 @@
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i>Linkedin</a></div>
         </div>
     </div>
+</section>
 
 
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
     <script src="/js/script.js"></script>
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+        new PageScroll('#pagescroll', {
+             // Options goes here
+         })
+       </script>
+
 </body>
 </html>
