--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!-- About me section -->
     <div class="section">
     <div id="aboutme" class="container">
-        <h1 class="col-lg-12 col-md-4 col-sm-6 col-xs-6 info text-center">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.<br><br><i class="bi bi-github"></i> <i class="bi bi-linkedin"></i></h1>
+        <h1 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info text-center">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.<br><br><a href="https://github.com/SURFLOU"><i class="bi bi-github"></i></a> <a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i></a> </h1>
         <h3 class="botinfo text-center"><i class="bi bi-caret-down"></i> <br> Scroll down to find more</h3>
         <br></br>
     </div>
     </div>
 
-        <div class ="section">
-        <div class="container" id="languageskills">
+        <div class ="section" id="languageskills">
+        <div class="container">
             <div class="row"> 
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2 class="text-center"> My languages skills: </h2>
@@ -160,7 +160,7 @@
         <h1 class="text-center col-sm-12 col-xs-12">Contact me</h1>
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="https://github.com/SURFLOU"><i class="bi bi-github"></i>Github</a></div>
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="https://github.com/SURFLOU"><i class="bi bi-envelope"></i>Email</a></div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="mailto:contact@piotrkonopka.com"><i class="bi bi-envelope"></i>Email</a></div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" style="font-size: 30px"><a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i>Linkedin</a></div>
         </div>
     </div>
@@ -181,6 +181,8 @@
                 "enabled": false
             },
             navigation: true,
+            paddingTop:'0px',
+
         });
        </script>
 
