--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="section">
     <div id="aboutme" class="container">
         <h1 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info text-center">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.<br><br><a href="https://github.com/SURFLOU"><i class="bi bi-github"></i></a> <a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i></a> </h1>
-        <h3 class="botinfo text-center"><i class="bi bi-caret-down"></i> <br> Scroll down to find more</h3>
+        <h3 class="botinfo text-center"><i class="bi bi-caret-down"></i> <br> Scroll down to find out more</h3>
         <br></br>
     </div>
     </div>
@@ -120,10 +120,10 @@
                 <img src="/img/pythonlogotransparent.png" class="card-img-top" alt="python logo">
                 <div class="card-body">
                 <h5 class="card-title text-center pythongradient">Python</h5>
-                <h5 class="card-title">Warsaw flat bot</h5>
-                <p class="card-text">App in python for telegram which seeks flats to rent in Warsaw</p>
+                <h5 class="card-title">Warsaw flats bot</h5>
+                <p class="card-text">Bot-app written for telegram which seeks available flats to rent in Warsaw</p>
                 </div>
-                <a href="https://github.com/SURFLOU/DataHelper">
+                <a href="https://github.com/SURFLOU/WarsawFlatsBot">
                     <span class="link-spanner"></span>
                 </a>
             </div>
