created dynamic age

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- About me section -->
     <div class="section">
     <div id="aboutme" class="container">
-        <h1 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info text-center">Hi, I'm Piotr and I'm 19 years old. I'm a polyglot and a programmer. I want to pursue my carrer in IT with foreign languages further.<br><br><a href="https://github.com/SURFLOU"><i class="bi bi-github"></i></a> <a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i></a> </h1>
+        <h1 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info text-center" id="age"><i class="bi bi-github"></i></a> <a href="https://www.linkedin.com/in/piotr-konopka-31820b241/"><i class="bi bi-linkedin"></i></a> </h1>
         <h3 class="botinfo text-center"><i class="bi bi-caret-down"></i> <br> Scroll down to find out more</h3>
         <br></br>
     </div>
